--- a/flyway-core/pom.xml
+++ b/flyway-core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.flywaydb</groupId>
         <artifactId>flyway-parent</artifactId>
-        <version>10.0.1</version>
+        <version>0-SNAPSHOT</version>
     </parent>
     <artifactId>flyway-core</artifactId>
     <packaging>jar</packaging>
